# games101

./: .gitignore
assignments/0/: NOTE.md
assignments/0/code/: CMakeLists.txt  main.cpp  package.json
assignments/1/: ROTATE_AROUND_VECTOR.md  euler_angles.js  rodrigues_rotation_formula.js  utils.js
assignments/1/code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  package.json  rasterizer.cpp  rasterizer.hpp
assignments/1/js/: euler_angles.mjs  index.mjs  rodrigues_rotation_formula.mjs
assignments/1/js/libs/: matrix.mjs  transform.mjs  vector.mjs
assignments/2/code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignments/3/code/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
docs/: index.html  posts.zh-ch.json  posts.zh-tw.json
forum/: crawler.mjs  package.json
forum/cache/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  45.html  (+26 more)
